# rpgh

./: CMakeLists.txt  main  main.c
headers/: mesa.h  section.h
include/: dbconnect.h  ficha.h  hellosql.h  mesa.h  ocupacao.h  pericias.h  section.h
lib/: dbconnect.c  ficha.c  helloSQL.c  mesa.c  ocupacao.c  pericias.c  section.c
src/: mesa.c  principal.c  section.c
